examples/invalid/not_homo_list.vbr
moderato() {
    arr: Melody<quarter> <-> [1, 'a', maj]|
    |>(arr[0])|
}